# MathTasks

./: .gitignore  CMakeLists.txt  MathTasks.sln  MathTasks.vcxproj  README.md  main.cpp  mmul.cpp  mmul.h  peval.h  rational.h  utils.h  vxor.cpp  vxor.h
